<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fit Control</string>
    <string name="action_adicionar">Add</string>
    <string name="action_sobre">About</string>
    <string name="action_editar">Edit</string>
    <string name="action_excluir">Delete</string>
    <string name="action_limpar">Clear</string>
    <string name="action_salvar">Save</string>
    <string name="autoria_aluno">Student name:</string>
    <string name="autoria_curso">Course:</string>
    <string name="autoria_email">Email:</string>
    <string name="autoria_descricao">Description:</string>
    <string name="exercicio_corrida">Running</string>
    <string name="exercicio_natacao">Swimming</string>
    <string name="exercicio_ciclismo">Cycling</string>
    <string name="exercicio_pular_corda">Jumping Rope</string>
    <string name="exercicio_danca">Dancing</string>
    <string name="exercicio_agachamento">Squatting</string>
    <string name="exercicio_flexao_de_braco">Push-ups</string>
    <string name="exercicio_abdominais">Sit-ups</string>
    <string name="exercicio_levantamento_de_peso">Weightlifting</string>
    <string name="exercicio_barra_fixa">Pull-ups</string>
    <string name="exercicio_tipo_aerobico">Aerobic</string>
    <string name="exercicio_tipo_anaerobico">Anaerobic</string>
    <string name="informacoes_limpadas">Information cleared</string>
    <string name="preencha_todos_campos">Please fill in all fields</string>
    <string name="concluido_label">Completed</string>
    <string name="nao_concluido">Not completed</string>
    <string name="nome_do_aluno_label">Student name:</string>
    <string name="curso_label">Course:</string>
    <string name="email_label">E-mail:</string>
    <string name="descricao_label">Description:</string>
    <string name="nome_do_exercicio_label">Exercise name</string>
    <string name="tipo_de_exercicio_label">Exercise type</string>
    <string name="aerobico">Aerobic</string>
    <string name="anaerobico">Anaerobic</string>
    <string name="exercicio_concluido_label">Exercise completed</string>
    <string name="duracao_do_exercicio_label">Exercise duration (minutes)</string>
    <string name="nome_label">Name</string>
    <string name="tipo_label">Type</string>
    <string name="duracao_label">Duration</string>
    <string name="limpar">Clear</string>
    <string name="salvar">Save</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="nome_do_aluno">Student name:</string>
    <string name="curso">Course:</string>
    <string name="email">Email:</string>
    <string name="descricao">Description:</string>
    <string name="concluido">completed</string>
    <string name="nome_do_exercicio">Exercise name</string>
    <string name="tipo_de_exercicio">Type of exercise</string>
    <string name="exercicio_concluido">Exercise completed</string>
    <string name="duracao_do_exercicio">Exercise duration</string>
    <string name="duracao_minutos">duration in minutes</string>
    <string name="nome">Name</string>
    <string name="tipo">type</string>
    <string name="duracao">duration</string>

</resources>
