<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_aluno"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvAlunoNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gabriel de Paula Vieira Cau"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Engenharia de Software"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="gabrieldepvc@gmail.com"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fit Control é um aplicativo de controle de exercícios físicos que permite ao usuário registrar, listar e gerenciar seus exercícios, ajudando a manter um histórico de atividades e acompanhar o progresso. O usuário pode adicionar, editar e excluir exercícios, bem como marcar os exercícios concluídos."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivLogoUTFPR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/utfpr_logo" />

    </LinearLayout>
</ScrollView>
